# paq8pxd

./: .gitignore  CMakeLists.txt  Common.cpp  Common.h  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  MemBuffer.cpp  MemBuffer.h  README.md  XWRT.h  build-mingw.bat  build.bzip2.bat  build.paq8pxd - assert.bat  build.paq8pxd.bat  build.preflate.bat  build.zlib.bat  build_compare.sh  changelog.txt  info.md  lstm1.inc  mod_ppmd.inc  mod_sse.cpp  paq8pxd.cpp  paq8pxv.cpp  sh_v2f.inc  test3d.cfg  test3i24.cfg  test3i8.cfg  test3img.cfg  test3s.cfg  ttaenc3.cpp  ttafilter.cpp  vm.cpp  wrton.cpp  wrtpre.cpp
analyser/: codec.cpp  codec.hpp  parser.hpp
analyzer/: analyzer.cpp  analyzer.hpp  codec.cpp  codec.hpp  parser.cpp  parser.hpp  reader.hpp
analyzer/parsers/: aiffparser.cpp  aiffparser.hpp  armparser.cpp  armparser.hpp  ascii85parser.cpp  ascii85parser.hpp  base641parser.cpp  base641parser.hpp  base642parser.cpp  base642parser.hpp  bmp2parser.cpp  bmp2parser.hpp  bmpparser.cpp  bmpparser.hpp  bzip2parser.cpp  bzip2parser.hpp  cdparser.cpp  cdparser.hpp  dbaseparser.cpp  dbaseparser.hpp  decaparser.cpp  decaparser.hpp  default.cpp  default.hpp  exeparser.cpp  exeparser.hpp  gifparser.cpp  gifparser.hpp  gzipparser.cpp  gzipparser.hpp  iscabparser.cpp  iscabparser.hpp  isoparser.cpp  isoparser.hpp  jpegparser.cpp  jpegparser.hpp  mdfparser.cpp  mdfparser.hpp  modparser.cpp  modparser.hpp  (+36 more)
bzip2/: bzlib.c  bzlib.h  bzlib_private.h  compress.c
doc/: help.md  parser.priority.and.types.txt
filters/: armfilter.cpp  armfilter.hpp  base64filter.cpp  base64filter.hpp  base85filter.cpp  base85filter.hpp  bmpfilter.cpp  bmpfilter.hpp  bzip2filter.cpp  bzip2filter.hpp  cdfilter.cpp  cdfilter.hpp  decafilter.cpp  decafilter.hpp  defaultfilter.cpp  defaultfilter.hpp  eolfilter.cpp  eolfilter.hpp  exefilter.cpp  exefilter.hpp  filter.cpp  filter.hpp  giffilter.cpp  giffilter.hpp  img24filter.cpp  img24filter.hpp  img32filter.cpp  img32filter.hpp  img4filter.cpp  img4filter.hpp  img8filter.cpp  img8filter.hpp  imgmrb.cpp  imgmrb.hpp  implodefilter.cpp  implodefilter.hpp  impngfilter.cpp  impngfilter.hpp  lzwfilter.cpp  lzwfilter.hpp  (+26 more)
filters/shrink/: bits.h  bitstream.h  huffman.cpp  huffman.h  implode.cpp  implode.h  implodefilter.hpp  lz77.cpp  lz77.h  reduce.cpp  reduce.h  shrink.cpp  shrink.h  tables.cpp  tables.h
models/: audio.cpp  audio.hpp  blank.hpp  chart.cpp  chart.hpp  dec.cpp  dec.hpp  distance.cpp  distance.hpp  dmc.cpp  dmc.hpp  exe.cpp  exe.hpp  im1bit.cpp  im1bit.hpp  im24bit.cpp  im24bit.hpp  im4bit.cpp  im4bit.hpp  im8bit.cpp  im8bit.hpp  indirect.cpp  indirect.hpp  jpeg.cpp  jpeg.hpp  linear.cpp  linear.hpp  lstm.cpp  lstm.hpp  match1.cpp  match1.hpp  match2.cpp  match2.hpp  model.hpp  nested.cpp  nested.hpp  normal.cpp  normal.hpp  ppmd.cpp  ppmd.hpp  (+16 more)
predictors/: predictor.cpp  predictor.hpp  predictoraudio.cpp  predictoraudio.hpp  predictordec.cpp  predictordec.hpp  predictorexe.cpp  predictorexe.hpp  predictorfast.hpp  predictorimg1.cpp  predictorimg1.hpp  predictorimg24.cpp  predictorimg24.hpp  predictorimg4.cpp  predictorimg4.hpp  predictorimg8.cpp  predictorimg8.hpp  predictorjpeg.cpp  predictorjpeg.hpp  predictors.cpp  predictors.hpp  predictortext.cpp  predictortext.hpp
preflate/: CMakeLists.txt  preflate_hash_chain.cpp  preflate_predictor_state.cpp  preflate_seq_chain.h  preflate_statistical_debug.cpp
preflate/support/: filestream.cpp  outputcachestream.h
prt/: APM.cpp  APM.hpp  APM1.cpp  APM1.hpp  APMPost.cpp  APMPost.hpp  CM128.cpp  CM128.hpp  DECAlpha.cpp  DECAlpha.hpp  EAPM.cpp  EAPM.hpp  ESSE.cpp  ESSE.hpp  LSTM.hpp  aerr.hpp  array.cpp  array.hpp  bh.hpp  blockdata.cpp  blockdata.hpp  bucket.hpp  buffers.hpp  cli.hpp  coder.cpp  coder.hpp  contextmap.cpp  contextmap.hpp  contextmap2.cpp  contextmap2.hpp  enums.cpp  enums.hpp  file.cpp  file.hpp  hash.cpp  hash.hpp  helper.cpp  helper.hpp  indirect.cpp  indirect.hpp  (+39 more)
prt/stemmer/: stemmer.hpp
prt/wrt/: wrt.hpp  wrton.cpp  wrton.hpp
stream/: stream.cpp  stream.hpp  streams.cpp  streams.hpp
tools/: readme.txt
